cargo-features = ["profile-rustflags"]

[package]
name = "hypixel-skyblock-util-tools"
description = "Command-line utility tools for Hypixel SkyBlock, written in Rust."
version = "1.0.0"
authors = ["Mustafa Öncel <mustafaoncel92@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/TheDGOfficial/hypixel-skyblock-util-tools"
readme = "README.md"
documentation = "https://github.com/TheDGOfficial/hypixel-skyblock-util-tools/"
keywords = ["hypixel skyblock"]
categories = ["command-line-utilities"]

edition = "2021"
#TODO bump with every Rust version
rust-version = "1.78.0"
exclude = ["/.github/*"]

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.11.27", default-features = false, features = ["brotli", "rustls-tls", "http3"] }

futures = "0.3.30"

serde = "1.0.197"
serde_json = "1.0.115"

#jemallocator = "0.5.4"
mimalloc = { version = "0.1.39", default-features = false }

nohash-hasher = "0.2.0"

#rustc-hash = "1.1.0"

colored = "2.1.0"

num = "0.4.1"

rand = { version = "0.8.5", features = ["small_rng"] }

home = "0.5.9"

notify = "6.1.1"

rev_buf_reader = "0.3.0"

log = { version = "0.4.21", features = ["release_max_level_warn"] }

env_logger = "0.11.3"

notify-rust = "4.11.0"

arboard = { version = "3.3.2", features = ["wayland-data-control"] }

sudo = "0.6.0"

cnproc = "0.2.1"

sysinfo = "0.30.8"

once_cell = "1.19.0"

nix = { version = "0.28.0", features = ["process", "signal"] }

[patch.crates-io]
cnproc = { git = "https://github.com/yorodm/cnproc-rs" } # makes it so recv only returns when an event happens

[profile.release]
debug = false
strip = "debuginfo"  # Automatically strip symbols from the binary.
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
opt-level = 3

[profile.release.package."*"]
debug = false
strip = "debuginfo"
codegen-units = 1
incremental = false
opt-level = 3
rustflags = ["-C", "opt-level=3", "-C", "target-cpu=native", "-Z", "tune-cpu=native", "-Z", "mir-opt-level=4"]

[profile.dev]
strip = false
lto = false
rustflags = ["-C", "opt-level=0", "-Z", "share-generics=y"]
codegen-units = 512
incremental = true

[profile.profiling]
inherits = "release"
strip = false
debug = true

