cargo-features = ["profile-rustflags"]

[package]
name = "hypixel-skyblock-util-tools"
description = "Command-line utility tools for Hypixel SkyBlock, written in Rust."
version = "1.0.0"
authors = ["Mustafa Öncel <mustafaoncel92@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/TheDGOfficial/hypixel-skyblock-util-tools"
readme = "README.md"
documentation = "https://github.com/TheDGOfficial/hypixel-skyblock-util-tools/"
keywords = ["hypixel skyblock"]
categories = ["command-line-utilities"]

edition = "2024"
#TODO bump with every Rust version
rust-version = "1.86.0"
exclude = ["/.github/*"]

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.15", default-features = false, features = ["brotli", "rustls-tls", "http3"] }

futures = "0.3.31"

serde = "1.0.219"
serde_json = "1.0.140"

#jemallocator = "0.5.4"
mimalloc = { version = "0.1.44", default-features = false }

nohash-hasher = "0.2.0"

#rustc-hash = "2.0.0"

colored = "3.0.0"

num = "0.4.3"

rand = { version = "0.9.0", features = ["small_rng"] }

home = "0.5.11"

notify = "8.0.0"

rev_buf_reader = "0.3.0"

log = { version = "0.4.27", features = ["release_max_level_warn"] }

env_logger = "0.11.7"

notify-rust = "4.11.6"

arboard = { version = "3.5.0", features = ["wayland-data-control"] }

sudo = "0.6.0"

cnproc = "0.2.1"

sysinfo = "0.34.1"

once_cell = "1.21.3"

nix = { version = "0.29.0", features = ["process", "signal"] }

[patch.crates-io]
cnproc = { git = "https://github.com/yorodm/cnproc-rs" } # makes it so recv only returns when an event happens

[profile.release]
debug = false
strip = "debuginfo"  # Automatically strip symbols from the binary.
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
opt-level = 3

[profile.release.package."*"]
debug = false
strip = "debuginfo"
codegen-units = 1
incremental = false
opt-level = 3
rustflags = ["-C", "opt-level=3", "-C", "target-cpu=native", "-Z", "tune-cpu=native", "-Z", "mir-opt-level=4", "-Z", "threads=8", "-Z", "polonius=next", "--cfg", "reqwest_unstable"]

[profile.dev]
strip = false
lto = false
rustflags = ["-C", "opt-level=0", "-Z", "share-generics=y", "-Z", "threads=8", "-Z", "polonius=next", "--cfg", "reqwest_unstable"]
codegen-units = 512
incremental = true

[profile.profiling]
inherits = "release"
strip = false
debug = true

