cargo-features = ["profile-rustflags", "panic-immediate-abort"]

[package]
name = "hypixel-skyblock-util-tools"
description = "Command-line utility tools for Hypixel SkyBlock, written in Rust."
version = "1.0.0"
authors = ["Mustafa Öncel <mustafaoncel92@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/TheDGOfficial/hypixel-skyblock-util-tools"
readme = "README.md"
documentation = "https://github.com/TheDGOfficial/hypixel-skyblock-util-tools/"
keywords = ["hypixel skyblock"]
categories = ["command-line-utilities"]

edition = "2024"
#TODO bump with every Rust version
rust-version = "1.96.0"
exclude = ["/.github/*"]

[dependencies]
tokio = { version = "1.50.0", default-features = false, features = ["rt-multi-thread"] }
reqwest = { version = "0.13.2", default-features = false, features = ["brotli", "http3", "query"] }

futures = { version = "0.3.32", default-features = false }

serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }

#jemallocator = { version = "0.5.4", default-features = false }
mimalloc = { version = "0.1.48", default-features = false, features = ["v3"] }

nohash-hasher = { version = "0.2.0", default-features = false, features = ["std"] }

#rustc-hash = { version = "2.1.1", default-features = false }

colored = { version = "3.1.1", default-features = false }

num = { version = "0.4.3", default-features = false }

rand = { version = "0.10.0", default-features = false, features = ["sys_rng"] }

home = { version = "0.5.12", default-features = false }

notify = { version = "8.2.0", default-features = false }

rev_buf_reader = { version = "0.3.0", default-features = false }

log = { version = "0.4.29", default-features = false, features = ["release_max_level_warn"] }

env_logger = { version = "0.11.9", default-features = false }

notify-rust = "4.12.0"

arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }

sudo = { version = "0.6.0", default-features = false }

cnproc = { version = "0.2.1", default-features = false }

sysinfo = { version = "0.38.0", default-features = false, features = ["system"] }

nix = { version = "0.31.1", default-features = false, features = ["process", "signal"] }

[patch.crates-io]
cnproc = { git = "https://github.com/yorodm/cnproc-rs" } # makes it so recv only returns when an event happens

[profile.release]
debug = false
strip = true # Automatically strip symbols from the binary.
lto = "fat"
codegen-units = 1
panic = "immediate-abort"
incremental = false
opt-level = 3

[profile.release.package."*"]
debug = false
strip = true
codegen-units = 1
incremental = false
opt-level = 3
rustflags = ["-C", "opt-level=3", "-C", "target-cpu=native", "-Z", "tune-cpu=native", "-Z", "mir-opt-level=4", "-Z", "threads=8", "-Z", "polonius=next", "--cfg", "reqwest_unstable", "-Z", "location-detail=none", "-Z", "fmt-debug=none"]

[profile.dev]
strip = false
lto = false
rustflags = ["-C", "opt-level=0", "-Z", "share-generics=y", "-Z", "threads=8", "-Z", "polonius=next", "--cfg", "reqwest_unstable"]
codegen-units = 512
incremental = true

[profile.profiling]
inherits = "release"
strip = false
debug = true

